examples/fail/unreachable_if_cond_never.hax
module examples::unreachable_if_cond_never;

import std::prelude;

pub sub main() -> Void {
  if (panic("boom")) {
    println("unreachable then");
    println("also unreachable then");
  } else {
    println("unreachable else");
  }

  println("unreachable after if");
}
